<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.example</groupId>
	<artifactId>chronicle</artifactId>
	<version>0.0.1-SNAPSHOT</version>


	<properties>
		<java.version>17</java.version>
    	<maven.compiler.target>17</maven.compiler.target>
    	<maven.compiler.source>17</maven.compiler.source>
    	<maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
	</properties>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/net.openhft/chronicle-core -->
		<dependency>
			<groupId>net.openhft</groupId>
			<artifactId>chronicle-core</artifactId>
			<version>2.24ea18</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.openhft/chronicle-bytes -->
		<dependency>
			<groupId>net.openhft</groupId>
			<artifactId>chronicle-bytes</artifactId>
			<version>2.24ea11</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.openhft/chronicle-map -->
		<dependency>
			<groupId>net.openhft</groupId>
			<artifactId>chronicle-map</artifactId>
			<version>3.24ea3</version>
		</dependency>


	</dependencies>
	
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
</project>